@@ -1,3 +1,9 @@
+2014-12-23  Even Rouault  <even.rouault@spatialys.com>
+
+	* libtiff/tif_read.c: fix several invalid comparisons of a uint64 value with
+	<= 0 by casting it to int64 first. This solves crashing bug on corrupted
+	images generated by afl.
+
 2014-12-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* tools/tiffdump.c: Guard against arithmetic overflow when
